* Added --list-languages option.
* Added support for dimensioned variables, contributed by Simon Bohlin [ASP].
* Added support for C# language.
* Added support for Erlang language, contributed by Brent Fulgham.
* Added support for SML (Standard ML) language, contributed by Venkatesh Prasad.
* Added mapping for .plx to Perl.
* Added tags for autocommand groups [Vim, Patch #664685].
* Added special handling of --options=NONE to disable automatic reading of
  options from configuration files or environment.
* Fixed problem with lower case <SID> tag [Vim, Bug #657327].
* Fixed problem recognizing indented code [Vim, Patch #664685].
* Fixed problem with infinite loop in certain comments [PL/SQL, Bug #629115].
* Fixed problem of incorrect extension field [C, Bug #639639].
* Fixed problem of empty scoping extension field [C, Bug #639644].
* Fixed missing tags for functions split across lines [PHP, Bug #681824].
* Fixed missing tags for nested subprograms using 'contains' [Fortran, Bug #670433].
* Fixed spurious tag when an array-spec occurs within an entity-decl [Fortran].
* Fixed missing scope extension field on namespaces [C++, C#, Bug #665086].
* Fixed several bugs causing missed tags [Fortran].
* Fixed problem with --langmap option preventing clearing of map [Bug #688442].
* Fixed man page errors and omissions.
* Fixed bug in readFieldValue() in readtags library.
* Fixed bug in option parsing in readtags command-line program.

ctags-5.4 (Thu Oct 17 2002)
* Improved ability for tagsOpen() in readtags library to report failure to
  open tag file, adding new fields to tagFileInfo structure.
* Improved Cobol support to include data, files, groups, and sections [Cobol].
* Added '$' a valid character for C identifier [VMS].
* Added support for recording routine argument declarations for C-like
  languages. See the --fields option and man page section TAG FILE FORMAT for
  more information [C, C++, Java].
* Added class and method support to TCL parser [TCL].